--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.21",
     "babel-loader": "^8.1.0",
+    "chromatic": "^5.1.0",
     "prettier": "^2.1.1",
     "react-is": "^16.13.1",
     "react-scripts": "3.4.3",
